fix: add gap for blocks element

--- a/resources/scss/footer.scss
+++ b/resources/scss/footer.scss
@@ -4,7 +4,7 @@
     strong {
         margin-bottom: 4px;
 
-        font-size: 16px;
+        font-size: 14px;
         color: #545454;
     }
 
